crates/ars-components/src/navigation/tabs/snapshots/ars_components__navigation__tabs__tests__tabs_close_trigger_custom_label.snap
---
source: crates/ars-components/src/navigation/tabs/tests.rs
assertion_line: 1027
expression: "snapshot_attrs(&service.connect(&|_| {}).close_trigger_attrs(\"Drafts\"))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "tab-close-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tabs",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Dismiss Drafts",
            ),
        ),
    ],
    styles: [],
}
