crates/ars-components/src/navigation/tabs/snapshots/ars_components__navigation__tabs__tests__tabs_close_trigger_default_label.snap
---
source: crates/ars-components/src/navigation/tabs/tests.rs
assertion_line: 1005
expression: "snapshot_attrs(&service.connect(&|_| {}).close_trigger_attrs(\"Inbox\"))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "tab-close-trigger",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tabs",
            ),
        ),
        (
            Aria(
                Hidden,
            ),
            String(
                "true",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Close Inbox",
            ),
        ),
    ],
    styles: [],
}
