crates/ars-components/src/navigation/tabs/snapshots/ars_components__navigation__tabs__tests__tabs_list_vertical_rtl.snap
---
source: crates/ars-components/src/navigation/tabs/tests.rs
assertion_line: 2018
expression: "snapshot_attrs(&service.connect(&|_| {}).list_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "list",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tabs",
            ),
        ),
        (
            Aria(
                Orientation,
            ),
            String(
                "vertical",
            ),
        ),
        (
            Id,
            String(
                "tabs-tablist",
            ),
        ),
        (
            Role,
            String(
                "tablist",
            ),
        ),
    ],
    styles: [],
}
