crates/ars-components/src/navigation/tabs/snapshots/ars_components__navigation__tabs__tests__tabs_panel_hidden.snap
---
source: crates/ars-components/src/navigation/tabs/tests.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).panel_attrs(&key(\"b\"), None))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "panel",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tabs",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "tabs-tab-s-62",
            ),
        ),
        (
            Hidden,
            Bool(
                true,
            ),
        ),
        (
            Id,
            String(
                "tabs-panel-s-62",
            ),
        ),
        (
            Role,
            String(
                "tabpanel",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
