crates/ars-components/src/navigation/tabs/snapshots/ars_components__navigation__tabs__tests__tabs_panel_reorderable_selected.snap
---
source: crates/ars-components/src/navigation/tabs/tests.rs
assertion_line: 2047
expression: "snapshot_attrs(&service.connect(&|_| {}).panel_attrs(&key(\"a\"), None))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "panel",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tabs",
            ),
        ),
        (
            Data(
                "ars-selected",
            ),
            Bool(
                true,
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "tabs-tab-a",
            ),
        ),
        (
            Id,
            String(
                "tabs-panel-a",
            ),
        ),
        (
            Role,
            String(
                "tabpanel",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
