crates/ars-components/src/navigation/tabs/snapshots/ars_components__navigation__tabs__tests__tabs_panel_with_label.snap
---
source: crates/ars-components/src/navigation/tabs/tests.rs
expression: "snapshot_attrs(&service.connect(&|_|\n{}).panel_attrs(&key(\"a\"), Some(\"Inbox\")))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "panel",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tabs",
            ),
        ),
        (
            Data(
                "ars-selected",
            ),
            Bool(
                true,
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Inbox",
            ),
        ),
        (
            Aria(
                LabelledBy,
            ),
            String(
                "tabs-tab-s-61",
            ),
        ),
        (
            Id,
            String(
                "tabs-panel-s-61",
            ),
        ),
        (
            Role,
            String(
                "tabpanel",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
