crates/ars-components/src/navigation/tabs/snapshots/ars_components__navigation__tabs__tests__tabs_root_auto_dir.snap
---
source: crates/ars-components/src/navigation/tabs/tests.rs
assertion_line: 1171
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-orientation",
            ),
            String(
                "horizontal",
            ),
        ),
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "tabs",
            ),
        ),
        (
            Dir,
            String(
                "auto",
            ),
        ),
    ],
    styles: [],
}
